[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/figures/t/t.png" type="Texture" id=1]
[ext_resource path="res://scripts/alive_figure.gd" type="Script" id=2]

[node name="alive_t" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": "10"
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -20.0
margin_top = -800.0
margin_right = 40.0
margin_bottom = 800.0
rect_pivot_offset = Vector2( 30, 800 )
color = Color( 1, 1, 1, 0.196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
margin_top = -800.0
margin_right = 40.0
margin_bottom = 800.0
rect_pivot_offset = Vector2( 10, 800 )
color = Color( 1, 1, 1, 0.196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 10, 0 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 10, 0 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Area2D"]
scale = Vector2( 0.95, 0.95 )
polygon = PoolVector2Array( 8.50177, 1.80354, 29.5476, 2.03825, 29.7823, 19.7981, -29.678, 19.2505, -29.8345, 1.7253, -8.6322, 1.56883, -8.55396, -19.5552, 8.45524, -19.6467 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 10, 0 )
scale = Vector2( 0.1, 0.1 )
polygon = PoolVector2Array( 8.50177, 1.80354, 29.5476, 2.03825, 29.7823, 19.7981, -29.678, 19.2505, -29.8345, 1.7253, -8.6322, 1.56883, -8.55396, -19.5552, 8.45524, -19.6467 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
